--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="js/scripts.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>Mr. Roboger Canadian Edition</title>
 </head>
 
 <body>
