--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <h1>Please enter a number that we can change into a list of magic numbers from the land of Make-Believe!</h1>
         <div>
           <form id="formOne">
-            <!-- <div class="form-group">
+            <div class="form-group">
               <label for="name">Name</label>
               <input id="name" class="form-control" type="text">
-            </div> -->
+            </div>
           
             <div class="form-group">
               <label for="number">Your number:</label>
