add link to separate page.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="js/scripts.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mr. Roboger Canadian Edition</title>
+  <title>Mr. Roboger (Canadian Edition)</title>
 </head>
 
 <body>
@@ -26,6 +26,8 @@
     <br>
     <br>
     <br>
+
+    <button type="clickable" class="btn-info">Version Française</button>
 
     <div class="container">
       <div class="intro">
