add link to French version.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <br>
     <br>
 
-    <button type="clickable" class="btn-info">Version Française</button>
+    
+    <button type="clickable" class="btn-info"><a href="https://thomasglenngit.github.io/monsieurR/">Version Française</a></button>
 
     <div class="container">
       <div class="intro">
