add corrections and bugs to README.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <br>
 
     
-    <button type="clickable" class="btn-info"><a href="https://thomasglenngit.github.io/monsieurR/">Version Française</a></button>
+    <button type="clickable" class="btn-info"><a href="https://thomasglenngit.github.io/monsieurR/">French Version</a></button>
 
     <div class="container">
       <div class="intro">
