enable the submit button function to take in another number without refreshing the page.

--- a/index.html
+++ b/index.html
@@ -89,11 +89,13 @@
 
         <div class="row">
           <div class="col-md-6" id="col3">
+            <button type="clickable" class="btn-warning" id="return">Return to the entry form.</button>
             <h3><strong>Your magic numbers:</strong></h3>
             <span class="number"></span>
           </div>
           <div class="col-md-6" id="col4">
             <img src="img/surprisedChild.jpg">
+            
           </div>
         </div>
       </div>
